# whale_radar

./: .env.example  .gitignore  README.md  docker-compose.yml  main.py  prd.md  pyproject.toml  run_spark.py  spark_train.py  test_kafka.py
airflow/dags/: daily_summary.py  retrain_model.py  weekly_backtest.py
grafana/provisioning/dashboards/: dashboard.yml  whale_dashboard.json
grafana/provisioning/datasources/: datasource.yml
hadoop/: hdfs-site.xml
spark/: spark-defaults.conf
src/whaleradar/: __init__.py  config.py
src/whaleradar/agents/: graph.py  impact_predictor.py  signal_generator.py  state.py  whale_profiler.py
src/whaleradar/collectors/: binance_ws.py  blockchain_monitor.py  exchange_addresses.py
src/whaleradar/dashboard/: streamlit_app.py
src/whaleradar/kafka/: consumer.py  producer.py  topics.py
src/whaleradar/mcp/: blockchain_explorer_tool.py  dashboard_tool.py  telegram_tool.py
src/whaleradar/spark/: ml_model.py  streaming_job.py
src/whaleradar/storage/: hdfs_client.py  models.py
